--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -26,6 +26,7 @@
     "instructionTitleLabel": "Instruction Title",
     "instructionDescriptionLabel": "Instruction Description",
     "addIngredient": "Add Ingredient",
+    "addIngredientOption": "Add Option",
     "ingrTitleLabel": "Ingredient Title",
     "ingrDescriptionLabel": "Ingredient Description",
     "ingrURLLabel": "Ingredient URL",
@@ -40,13 +41,13 @@
     "waterShutOffTitle": "Water Shut Off",
     "waterShutOffSubtitle": "Learn how to shut off the water supply",
     "waterShutOffLocationTitle": "Location",
-    "waterShutOffLocationSubtitle": "The main water shut off valve is located in the basement, near the water meter.",
+    "waterShutOffLocationSubtitle": "The main water shut off valves are located under the sink in the kitchen.",
     "waterShutOffInstructionsTitle": "Instructions",
-    "waterShutOffInstructionsSubtitle": "To shut off the water, turn the valve clockwise until it stops. To turn the water back on, turn the valve counterclockwise until it stops.",
+    "waterShutOffInstructionsSubtitle": "To shut off the water, turn the valve 90° counterclockwise. To turn the water back on, turn the valve clockwise 90°. The bathroom valve is the round one to the right. To turn it on and off, turn the valve counterclockwise or clockwise until the water is flowing or not.",
     "powerOutageTitle": "Power Outage",
     "powerOutageSubtitle": "What to do during a power outage",
     "powerOutageWhatToDoTitle": "What to do",
-    "powerOutageWhatToDoSubtitle": "If the power goes out, check the circuit breaker or fuse box to see if a switch has been tripped or a fuse has blown. If the problem persists, contact the power company.",
+    "powerOutageWhatToDoSubtitle": "If the power goes out, check the circuit breaker or fuse box to see if a switch has been tripped or a fuse has blown. If the problem persists, try going to the building switches downstairs, and see if number 13 (labelled Inzerillo) is turned off. It it's not, try checking if the building is experiencing a blackout.",
     "powerOutageSafetyPrecautionsTitle": "Safety Precautions",
     "powerOutageSafetyPrecautionsSubtitle": "Avoid using candles or open flames, as they can be a fire hazard. Use flashlights or battery-powered lanterns instead.",
     "hvacTitle": "HVAC",
@@ -54,5 +55,5 @@
     "hvacThermostatLocationTitle": "Location",
     "hvacThermostatLocationSubtitle": "The thermostat is located in the living room, on the wall near the window.",
     "hvacTemperatureSettingsTitle": "Temperature Settings",
-    "hvacTemperatureSettingsSubtitle": "The recommended temperature settings are 68°F in the winter and 78°F in the summer."
+    "hvacTemperatureSettingsSubtitle": "The recommended temperature settings are 18°C in the winter and 25°C in the summer."
 }
