Added labels for coffee maker

--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -58,6 +58,11 @@
     "kitchenCoffeeMakerTitle": "Caffettiera",
     "kitchenCoffeeMakerSubtitle": "La caffettiera è situata sul bancone nella cucina.",
     "kitchenCoffeeMakerInstructions": "Per fare un caffè, prendere una capsula dal barattolo sulla caffettiera. Estrarre il supporto dalla caffettiera, inserire il filtro e rimettere il supporto. Controllare che l'acqua della caffettiera non sia vuota. \nAttaccare la presa e premere una volta il pulsante. Il caffé comincerà ad essere erogato, per farlo smettere premere di nuovo il pulsante.",
+    "kitchenCoffeeMakerButtonLabel": "Pulsante",
+    "kitchenCoffeeMakerJarLabel": "Barattolo",
+    "kitchenCoffeeMakerPlugLabel": "Presa",
+    "kitchenCoffeeMakerTrayLabel": "Supporto",
+    "kitchenCoffeeMakerWaterTankLabel": "Acqua",
     "kitchenCounterPlugsTitle": "Prese del bancone",
     "kitchenCounterPlugsSubtitle": "Le prese del bancone sono situate sul bancone nella cucina, a destra del microonde.",
     "kitchenFridgeTitle": "Frigorifero",
