--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -58,6 +58,11 @@
     "kitchenCoffeeMakerTitle": "Coffee Maker",
     "kitchenCoffeeMakerSubtitle": "The coffee maker is located on the kitchen counter.",
     "kitchenCoffeeMakerInstructions": "To brew a cup of coffee, first take your preferred filter from the jar on the coffee maker. Extract the tray and position the filter inside it, then re-insert the tray. Make sure the water tank is full. \nYou just need to plug the coffee maker, press the button one time and it will start to make coffee. The machine will brew the coffee, and just press the button again when you're done to turn it off.",
+    "kitchenCoffeeMakerButtonLabel": "Button",
+    "kitchenCoffeeMakerJarLabel": "Jar",
+    "kitchenCoffeeMakerPlugLabel": "Plug",
+    "kitchenCoffeeMakerTrayLabel": "Tray",
+    "kitchenCoffeeMakerWaterTankLabel": "Water Tank",
     "kitchenCounterPlugsTitle": "Counter Plugs",
     "kitchenCounterPlugsSubtitle": "The counter plugs are located by the kitchen counter, close to the microwave.",
     "kitchenFridgeTitle": "Fridge",
