--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -60,7 +60,7 @@
     "kitchenCoffeeMakerInstructions": "Per fare un caffè, prendere una capsula dal barattolo sulla caffettiera. Estrarre il supporto dalla caffettiera, inserire il filtro e rimettere il supporto. Controllare che l'acqua della caffettiera non sia vuota. \nAttaccare la presa e premere una volta il pulsante. Il caffé comincerà ad essere erogato, per farlo smettere premere di nuovo il pulsante.",
     "kitchenCoffeeMakerButtonLabel": "Pulsante",
     "kitchenCoffeeMakerJarLabel": "Barattolo",
-    "kitchenCoffeeMakerPlugLabel": "Presa",
+    "plugLabel": "Presa",
     "kitchenCoffeeMakerTrayLabel": "Supporto",
     "kitchenCoffeeMakerWaterTankLabel": "Acqua",
     "kitchenCounterPlugsTitle": "Prese del bancone",
@@ -69,6 +69,9 @@
     "kitchenFridgeSubtitle": "Il Frigorifero è situato a destra del bancone della cucina.",
     "kitchenKettleTitle": "Bollitore",
     "kitchenKettleSubtitle": "Il bollitore è situato sul bancone nella cucina.",
+    "kitchenKettleInstruction": "Per aprire il bollitore, premere il pulsante. Il coperchio si aprirà docemente, per richiuderlo basta premere fino a quando non cliccherà. Per bollire l'acqua, prima collegare la presa, e premere il tasto. Se il tasto si illumina di arancione, il bollitore è acceso. Per spegnerlo, alzare il tasto.",
+    "kitchenKettleButtonLabel": "Pulsante",
+    "kitchenKettleHandleLabel": "Tasto",
     "kitchenMicrowaveTitle": "Microonde",
     "kitchenMicrowaveSubtitle": "Il microonde è situato sul bancone nella cucina.",
     "kitchenOvenTitle": "Forno",
