--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -60,7 +60,7 @@
     "kitchenCoffeeMakerInstructions": "To brew a cup of coffee, first take your preferred filter from the jar on the coffee maker. Extract the tray and position the filter inside it, then re-insert the tray. Make sure the water tank is full. \nYou just need to plug the coffee maker, press the button one time and it will start to make coffee. The machine will brew the coffee, and just press the button again when you're done to turn it off.",
     "kitchenCoffeeMakerButtonLabel": "Button",
     "kitchenCoffeeMakerJarLabel": "Jar",
-    "kitchenCoffeeMakerPlugLabel": "Plug",
+    "plugLabel": "Plug",
     "kitchenCoffeeMakerTrayLabel": "Tray",
     "kitchenCoffeeMakerWaterTankLabel": "Water Tank",
     "kitchenCounterPlugsTitle": "Counter Plugs",
@@ -69,6 +69,9 @@
     "kitchenFridgeSubtitle": "The fridge is located to the right of the kitchen counter.",
     "kitchenKettleTitle": "Kettle",
     "kitchenKettleSubtitle": "The kettle is located on the kitchen counter.",
+    "kitchenKettleInstructions": "To open the kettle, press the button. To seal it back, simply press the lid until it clicks. To boil water, first plug the kettle and turn the kettle on by pressing the handle down. If it clicks and it lights up orange, the kettle is on. Turn it off when you're done by lifting the handle up.",
+    "kitchenKettleButtonLabel": "Button",    
+    "kitchenKettleHandleLabel": "Handle",
     "kitchenMicrowaveTitle": "Microwave",
     "kitchenMicrowaveSubtitle": "The microwave is located on the kitchen counter.",
     "kitchenOvenTitle": "Oven",
